--- a/doc/faq.asciidoc
+++ b/doc/faq.asciidoc
@@ -279,7 +279,7 @@ the following steps.
 1. Import the CA Certificate
 +
 ----
-certutil -D "sql:${HOME}/.pki/nssdb" -A -i <path_to_ca_cert.pem> -n "My Fancy CA" -t "TC,C,T"
+certutil -d "sql:${HOME}/.pki/nssdb" -A -i <path_to_ca_cert.pem> -n "My Fancy CA" -t "TC,C,T"
 ----
 +
 2. Merge your `<cert.crt>` and `<privkey.pem>` files into a single `PKCS#12`
