--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -1700,6 +1700,7 @@ This setting is only available with the QtWebEngine backend.
 [[colors.webpage.darkmode.policy.page]]
 === colors.webpage.darkmode.policy.page
 Which pages to apply dark mode to.
+The underlying Chromium setting has been removed in QtWebEngine 5.15.3, thus this setting is ignored there. Instead, every element is now classified individually.
 
 This setting requires a restart.
 
