Fall back to "prefers-color-scheme: light" on Qt 5.15.2
Due to https://bugreports.qt.io/browse/QTBUG-89753, Qt 5.15.2 matches
no-preference instead of doing auto-detection.

However, no-preference was removed from the CSSWG spec:
https://github.com/w3c/csswg-drafts/issues/3857#issuecomment-499523323

Thus, if we are on a buggy Qt version with no auto-detection possible,
always assume "light". Quoting the spec (emphasis mine):

    light:

    Indicates that user has expressed the preference for
    a page that has a light theme (dark text on light background),
    *or has not expressed an active preference*
    (and thus should receive the "web default" of a light theme).

Fixes #6097
See https://github.com/qutebrowser/qutebrowser/issues/6147#issuecomment-776559729

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -48,6 +48,10 @@ Fixed
   which at the time of writing packages 5.15.3 disguised as 5.15.2).
 - When dark mode settings were set, existing `blink-features` arguments in
   `qt.args` (or `--qt-flag`) were overridden. They are now combined properly.
+- On QtWebEngine 5.15.2, auto detection for the `prefers-color-scheme` media
+  query is broken and always returns `no-preference`, which was removed from the
+  CSS WG Specification. This release contains a workaround to always return
+  `light` instead (as per the spec).
 
 
 [[v2.0.2]]
