--- a/doc/faq.asciidoc
+++ b/doc/faq.asciidoc
@@ -97,10 +97,20 @@ security bugs, please contact me directly at mail@qutebrowser.org, GPG ID
 https://www.the-compiler.org/pubkey.asc[0x916eb0c8fd55a072].
 
 Is there an ad blocker?::
-    With version 2.0.0, if the Python adblock library is available, it will be used
-    to integrate Brave's Rust adblocker library for improved adblocking 
-    based on ABP-like filter lists (such as EasyList). Otherwise, the default ad blocker
-    is a simple host-based ad blocker that takes `/etc/hosts`-like lists.
+    Since version 2.0.0, if the
+    https://pypi.org/project/adblock/[Python `adblock` library] is available,
+    it will be used to integrate
+    https://github.com/brave/adblock-rust[Brave's Rust adblocker library]
+    for improved adblocking, based on
+    https://help.eyeo.com/en/adblockplus/how-to-write-filters[ABP-like filter lists]
+    (such as https://easylist.to/[EasyList]).
+    If that library is unavailable or on older versions of qutebrowser, a
+    simpler built-in ad blocker is used instead. It takes `/etc/hosts`-like lists
+    and thus is only able to block entire hosts.
++
+Note that even the more sophisticated blocker
+https://github.com/qutebrowser/qutebrowser/issues/5754[does not support element hiding]
+(cosmetic filtering) yet, it only blocks network requests.
 
 How can I get No-Script-like behavior?::
     To disable JavaScript by default:
