--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -19,6 +19,22 @@ breaking changes (such as renamed commands) can happen in minor releases.
 v2.1.0 (unreleased)
 -------------------
 
+Removed
+~~~~~~~
+
+- The following command aliases were deprecated in v2.0.0 and are now removed:
+  * `run-macro` -> `macro-run`
+  * `record-macro` -> `macro-record`
+  * `buffer` -> `tab-select`
+  * `open-editor` -> `edit-text`
+  * `toggle-selection` -> `selection-toggle`
+  * `drop-selection` -> `selection-drop`
+  * `reverse-selection` -> `selection-reverse`
+  * `follow-selected` -> `selection-follow`
+  * `follow-hint` -> `hint-follow`
+  * `enter-mode` -> `mode-enter`
+  * `leave-mode` -> `mode-leave`
+
 Added
 ~~~~~
 
@@ -32,7 +48,7 @@ Added
 Changed
 ~~~~~~~
 
-- Initial support for Qt 5.15.3 and PyQt 5.15.3
+- Initial support for QtWebEngine 5.15.3 and PyQt 5.15.3/.4
 - The `colors.webpage.prefers_color_scheme_dark` setting got renamed to
   `colors.webpage.preferred_color_scheme` and now takes the values `auto`, `light`
   and `dark` (instead of being `True` for dark and `False` for auto).
@@ -70,9 +86,15 @@ Changed
 Fixed
 ~~~~~
 
+- With QtWebEngine 5.15.3 and some locales, Chromium can't start its
+  subprocesses. As a result, qutebrowser only shows a blank page and logs
+  "Network service crashed, restarting service.".  This release adds a
+  `qt.workarounds.locale` setting working around the issue. It is disabled by
+  default since distributions shipping 5.15.3 will probably have a proper patch
+  for it backported very soon.
 - The `colors.webpage.preferred_color_scheme` and `colors.webpage.darkmode.*`
-  settings now work correctly with the upcoming QtWebEngine 5.15.3 (and Gentoo,
-  which at the time of writing packages 5.15.3 disguised as 5.15.2).
+  settings now work correctly with QtWebEngine 5.15.3 (and Gentoo, which at the
+  time of writing packages 5.15.3 disguised as 5.15.2).
 - When dark mode settings were set, existing `blink-features` arguments in
   `qt.args` (or `--qt-flag`) were overridden. They are now combined properly.
 - On QtWebEngine 5.15.2, auto detection for the `prefers-color-scheme` media
@@ -97,12 +119,9 @@ Fixed
   accidentally treated that as "@run-at document-idle". However, other
   GreaseMonkey implementations default to "@run-at document-end" instead, which
   is what qutebrowser now does, too.
-- With QtWebEngine 5.15.3 and some locales, Chromium can't start its
-  subprocesses. As a result, qutebrowser only shows a blank page and logs
-  "Network service crashed, restarting service.".  This release adds a
-  `qt.workarounds.locale` setting working around the issue. It is disabled by
-  default since distributions shipping 5.15.3 will probably have a proper patch
-  for it backported very soon.
+- The `hist_importer.py` script didn't work correctly after qutebrowser v2.0.0
+  and resulted in a history database qutebrowser couldn't read properly. It now
+  works properly again.
 
 [[v2.0.2]]
 v2.0.2 (2021-02-04)
