--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.1.1]]
+v2.1.1 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- The workaround for black on (almost) black formula images in dark mode now
+  also works with Qt 5.12 and 5.13.
+
 [[v2.1.0]]
 v2.1.0 (2021-03-12)
 -------------------
