--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,16 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.2.0]]
+v2.2.0 (unreleased)
+-------------------
+
+Added
+~~~~~
+
+- New `input.media_keys` setting which can be used to disable Chromium's
+  handling of media keys.
+
 [[v2.1.1]]
 v2.1.1 (unreleased)
 -------------------
