--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -48,6 +48,13 @@ Fixed
 - The workaround for black on (almost) black formula images in dark mode now
   also works with Qt 5.12 and 5.13.
 - When running in Flatpak, the QtWebEngine version is now detected properly.
+  Before, a wrong version was assumed, breaking dark mode and certain workarounds
+  (resulting in crashes on websites like LinkedIn or TradingView).
+- When running in Flatpak, communicating with an existing instance now works
+  properly. Before, a new instance was always opened.
+- When the metainfo in the completion database doesn't have the expected
+  structure, qutebrowser now tries to gracefully recover from the situation
+  instead of crashing.
 
 [[v2.1.0]]
 v2.1.0 (2021-03-12)
