--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -32,6 +32,12 @@ Added
 - New `input.media_keys` setting which can be used to disable Chromium's
   handling of media keys.
 
+Changed
+~~~~~~~
+
+- The completion now also shows bindings starting with `set-cmd-text` in its
+  third column, such as `o` for `:open`.
+
 [[v2.1.1]]
 v2.1.1 (unreleased)
 -------------------
