Add content.tls.certificate_errors = ask-block-thirdparty
Fixes #3418

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2638,6 +2638,7 @@ Type: <<types,String>>
 Valid values:
 
  * +ask+: Ask how to proceed for every certificate error (unless non-overridable due to HSTS).
+ * +ask-block-thirdparty+: Ask how to proceed for normal page loads, but silently block resource loads.
  * +block+: Automatically block loading on certificate errors.
  * +load-insecurely+: Force loading pages despite certificate errors. This is *insecure* and should be avoided. Instead of using this, consider fixing the underlying issue or importing a self-signed certificate via `certutil` (or Chromium) instead.
 
