Adding misc-krunker quirk

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2644,6 +2644,7 @@ Valid values:
  * +js-string-replaceall+
  * +js-globalthis+
  * +js-object-fromentries+
+ * +misc-krunker+
 
 Default: empty
 
