Fix site-specific-quirk check for MathML darkmode

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2645,6 +2645,7 @@ Valid values:
  * +js-globalthis+
  * +js-object-fromentries+
  * +misc-krunker+
+ * +misc-mathml-darkmode+
 
 Default: empty
 
